# Real_Time_Systems

./: README.md
Lab1_Task_Creation/: CMakeLists.txt  tiebreak.diff
Lab1_Task_Creation/config/: FreeRTOSConfig.h
Lab1_Task_Creation/include/utils/: delay.h  highPrioTask.h
Lab1_Task_Creation/include/utils/traces/: traces.h
Lab1_Task_Creation/src/: main.c
Lab1_Task_Creation/src/utils/: delay.c  highPrioTask.c
Lab1_Task_Creation/src/utils/traces/: traces.c
Lab2_FP_vs_EDF/: CMakeLists.txt
Lab2_FP_vs_EDF/include/utils/: mlTask.h
Lab2_FP_vs_EDF/src/: main.c
Lab3_Shared_Resources/: CMakeLists.txt
Lab3_Shared_Resources/config/: FreeRTOSConfig.h
Lab3_Shared_Resources/include/: lwipopts.h
Lab3_Shared_Resources/include/utils/data_types/: stack.h
Lab3_Shared_Resources/include/utils/policies/npp/: npp.h
Lab3_Shared_Resources/include/utils/policies/srp/: srp.h
Lab3_Shared_Resources/include/utils/traces/: traces.h
Lab3_Shared_Resources/src/: main.c  main_srp.c
Lab3_Shared_Resources/src/utils/data_types/: stack.c
Lab3_Shared_Resources/src/utils/policies/npp/: npp.c
Lab3_Shared_Resources/src/utils/policies/srp/: srp.c
